--- a/personal-porfolio/index.css
+++ b/personal-porfolio/index.css
@@ -6,7 +6,10 @@ body {
 }
 
 nav {
-  /* border: 1px solid black; */
+  /* border: 1px solid rgb(177, 175, 175);
+  border-top: 0;
+  border-left: 0;
+  border-right: 0; */
   display: flex;
   justify-content: space-between;
 }
@@ -26,4 +29,33 @@ main {
 
 footer {
   /* border: 1px solid green; */
+}
+
+.hero-img {
+  border-radius: 500px;
+}
+
+.hero-links {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.hero-links li a {
+  color: gray;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  padding: 2px 13px;
+}
+.hero-links li a:hover {
+  border: 1px solid #f28918;
+  color: #f28918;
+}
+
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
